--- a/wordpress/index.html
+++ b/wordpress/index.html
@@ -65,7 +65,7 @@ img.emoji {
 		<div class="site-branding-text">
 							<h1 class="site-title"><a href="" rel="home">Cycloid - @PROJECT@ @ENV@</a></h1>
 
-							<p class="site-description">Commit ID: @COMMIT@</p>
+							<p class="site-description">Image ID: @COMMIT@</p>
 							<p class="site-description">Your DevOps Framework</p>
 					</div><!-- .site-branding-text -->
 
